Reorder ARC++ accessibility nodes using layout

This change is largely motivated by TalkBack utils.

The problem
It seems as though Android's accessibility tree is not in-order (rendered from left to right, top to bottom) when walking the tree in pre order.

As a result, app drawers appear at the end of the navigation linearization.

Bug: 813721
Test: navigate linearly through Play Store. Verify navigation button/app text/search text field get seen first, then the app contents
Change-Id: I489b18708b8fb3a03a9d6e0cf0d42c830c9ac21f
Reviewed-on: https://chromium-review.googlesource.com/928047
Reviewed-by: Yuki Awano <yawano@chromium.org>
Commit-Queue: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539065}
Former-commit-id: 04b916e5271836799bd8f0d7888eaa2989acf738